Closed
Bug 1873574
Opened 2 years ago
Closed 1 years ago
[clang-trunk] Perma /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/BindingOperations.cpp:177:107: error: no member named 'UTF8' in 'clang::StringLiteral'
Categories
(Webtools :: Searchfox, defect, P5)
Webtools
Searchfox
Tracking
(firefox127 fixed)
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
firefox127 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: glandium)
References
Details
Attachments
(1 file)
Filed by: mh [at] glandium.org
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=442602947&repo=toolchains
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/GkswnK4mRFSp_MNHwhtw4Q/runs/0/artifacts/public/logs/live_backing.log
[task 2024-01-09T00:08:31.942Z] 00:08:31 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/BindingOperations.cpp:177:107: error: no member named 'UTF8' in 'clang::StringLiteral'
[task 2024-01-09T00:08:31.942Z] 00:08:31 INFO - 177 | Expr *langExpr = StringLiteral::Create(C, AbstractBinding::stringFromLang(binding.lang), StringLiteral::UTF8, false, {}, {});
[task 2024-01-09T00:08:31.942Z] 00:08:31 INFO - | ~~~~~~~~~~~~~~~^
[task 2024-01-09T00:08:31.943Z] 00:08:31 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/BindingOperations.cpp:178:107: error: no member named 'UTF8' in 'clang::StringLiteral'
[task 2024-01-09T00:08:31.944Z] 00:08:31 INFO - 178 | Expr *kindExpr = StringLiteral::Create(C, AbstractBinding::stringFromKind(binding.kind), StringLiteral::UTF8, false, {}, {});
[task 2024-01-09T00:08:31.944Z] 00:08:31 INFO - | ~~~~~~~~~~~~~~~^
[task 2024-01-09T00:08:31.944Z] 00:08:31 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/BindingOperations.cpp:179:78: error: no member named 'UTF8' in 'clang::StringLiteral'
[task 2024-01-09T00:08:31.944Z] 00:08:31 INFO - 179 | Expr *symbolExpr = StringLiteral::Create(C, binding.symbol, StringLiteral::UTF8, false, {}, {});
[task 2024-01-09T00:08:31.944Z] 00:08:31 INFO - | ~~~~~~~~~~~~~~~^
[task 2024-01-09T00:08:31.944Z] 00:08:31 INFO - 3 errors generated.
Assignee | ||
Comment 1•2 years ago
|
||
This upstream change broke the plugin: https://github.com/llvm/llvm-project/commit/3e6ce58701a3a8463b53fb3fd2023c02b4e90554
Comment hidden (Intermittent Failures Robot) |
Comment 3•2 years ago
|
||
I won't have availability for this until H2, but I can review patches in a timely fashion.
Flags: needinfo?(bugmail)
Assignee | ||
Comment 4•1 years ago
|
||
Another set:
[task 2024-04-26T06:09:59.023Z] 06:09:59 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp:1752:57: error: no member named 'isPure' in 'clang::FunctionDecl'
[task 2024-04-26T06:09:59.023Z] 06:09:59 INFO - 1752 | Kind = (D2->isThisDeclarationADefinition() || D2->isPure()) ? "def" : "decl";
[task 2024-04-26T06:09:59.023Z] 06:09:59 INFO - | ~~ ^
[task 2024-04-26T06:09:59.023Z] 06:09:59 ERROR - /builds/worker/checkouts/gecko/build/clang-plugin/mozsearch-plugin/MozsearchIndexer.cpp:1884:54: error: no member named 'isPure' in 'clang::FunctionDecl'
[task 2024-04-26T06:09:59.023Z] 06:09:59 INFO - 1884 | if ((D2->isThisDeclarationADefinition() || D2->isPure()) &&
[task 2024-04-26T06:09:59.024Z] 06:09:59 INFO - | ~~ ^
[task 2024-04-26T06:09:59.024Z] 06:09:59 INFO - 2 errors generated.
Assignee: nobody → mh+mozilla
Assignee | ||
Comment 5•1 years ago
|
||
StringLiteral was changed in https://github.com/llvm/llvm-project/commit/3e6ce58701a3a8463b53fb3fd2023c02b4e90554
isPure was changed in https://github.com/llvm/llvm-project/commit/e90e43fb9cd1d305f7196cd526aa503374e0f616
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/8eea3ae36ad8
Adjust searchfox plugin to LLVM 18 changes. r=asuth
You need to log in
before you can comment on or make changes to this bug.
Description
•