Bug 1873574 - Adjust searchfox plugin to LLVM 18 changes. r=asuth

StringLiteral was changed in https://github.com/llvm/llvm-project/commit/3e6ce58701a3a8463b53fb3fd2023c02b4e90554

isPure was changed in https://github.com/llvm/llvm-project/commit/e90e43fb9cd1d305f7196cd526aa503374e0f616

Differential Revision: https://phabricator.services.mozilla.com/D208723